# yibi-stack

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .spectra.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pr20-diff.patch  pyproject.toml  skills-lock.json
.claude/: hookify.warn-plugin-version-lockstep.local.md  hookify.warn-subshell-exit-fail-open.local.md  settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude/agents/: bash-to-script.md  explorer.md  handover-context.md  security-scanner.md
.claude/commands/: clean-gone.md  clean-merged.md  debug-to-pr.md  debug.md  newjob.md  pr.md
.claude/hooks/: _audit_log.py  _audit_log.sh  bash-ap1-inline-check.sh  bash-ap2-check.py  markdownlint-pre-commit.sh  post-compact-handover-back.sh  post-edit-mypy.sh  post-write-markdownlint.sh  pre-commit.sh  pre-compact-handover.sh  pre-push-ruff-format-guard.py  pre-push-tree-drift-guard.py  protect-push.sh  protect-tracked-rm.py  protect-worktree.py
.claude/rules/: 01-language-and-tone.md  02-error-and-import.md  03-security.md  04-module-structure.md  05-pydantic-models.md  06-config-pattern.md  07-db-pattern.md  08-cli-pattern.md  09-test-conventions.md  10-parser-pattern.md  11-skill-authoring.md  12-auto-handover.md  13-bash-anti-patterns.md  14-shell-quoting-hygiene.md  15-irreversible-operations.md  16-allowlist-hygiene.md
.codex/: hooks.json
.codex/agents/: bash-to-script.toml  explorer.toml  handover-context.toml  security-scanner.toml
.codex/hooks/: _audit_log.sh  bash-ap1-inline-check.sh  post-compact-handover-back.sh  post-edit-mypy.sh  pre-commit.sh  pre-compact-handover.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
commands/: clean-gone.md  clean-merged.md  clean-wt.md  debug-to-pr.md  debug.md  handover-back.md  handover.md  harness-eval.md  lessons.md  newjob.md  pr-retro.md  pr.md  recall.md
commands/scripts/: clean_wt.sh  handover-read.sh  newjob-copy-gitignored.sh  newjob-port-setup.sh  newjob-push-guard.sh  newjob-resolve-pull-conflict.sh  newjob-validate.sh  newjob_resolve_pull_conflict.py
docs/: bash-anti-pattern-violations.md  billing-parser-plan.md  harness-eval-effectiveness-review.md  migration-plan.md  parser-status.md  plugin-primary-plan.md  spectra-plugin-plan.md
docs/adr/: 0001-spectra-amplifier-plugin-redesign.md  0002-bash-parser-bug-hook-workaround.md  0003-gwscli-go-gmail-cli-design.md  0004-plugin-primary-packaging.md  0005-skill-compat-gate-capability-not-version.md  README.md
docs/improvement/: gmail-billing-parser-fixes.md
docs/issues/: claude-code-bash-hooks.md  comment-draft-p1-on-43713.md  issue-draft-p2-string-node.md  issue-draft-p3-pipeline-heredoc.md  issue-draft-p5-cd-scope.md
docs/research/: 2026-05-05-gbrain-vs-session-memory.md  2026-05-24-pr-review-mob-multitier-ab-experiment.md  2026-05-24-rules-english-recall-audit-token-optimization.md  2026-05-27-mycelium-layered-memory-design.md  2026-05-28-spectra-speckit-openspec-comparison.md  2026-06-03-efc-feedback-compute-harness-eval-reference.md  2026-07-03-figma-mcp-rest-library-limitations.md  claude-code-weekly-2026-05-25-infographic-prompt.md  claude-code-weekly-2026-05-25.md
plugins/3rd-tools/: README.md  package.json
plugins/bash-hygiene/: README.md  package.json  rules-context.md
plugins/growth/: README.md  package.json
plugins/harness/: README.md
plugins/pr-flow/: README.md  package.json
plugins/sdd/: README.md  package.json
plugins/spectra/: README.md  package.json
plugins/tdd/: README.md  package.json
plugins/util/: README.md  package.json
plugins/writing/: README.md  package.json
scripts/: README.md  assert_import_from_site_packages.py  assert_not_worktree.sh  categorize_hsbc.py  categorize_hsbc_rules.py  check_blank_proposal.py  check_wheel_contents.py  compare_billing.py  extract_saas_invoice_amounts.py  import_hsbc_missing.py  install-rules-to-repo.sh  lessons  lint_rule_frontmatter.py  lint_shell_subshell_exit.py  lint_shell_syntax.sh  lint_skill_bash.py  lint_skill_overlap.py  lint_skill_scope.py  list_non_gstack_skills.sh  log_bash_hygiene_event.py  packaging_smoke_test.sh  patch-pr-review-agents.sh  patch_agy_allow_list.py  patch_gemini_allow_list.py  register_skill_repo.py  release-full.sh  report_2024_2025.py  resolve-skill-repo  safe_symlink.sh  sync-plugin-versions.sh  sync_plugin_versions.py  verify_bash_fix.sh
scripts/tests/: test_assert_not_worktree.py  test_check_wheel_contents.py  test_lessons_wrapper.py  test_lint_rule_frontmatter.py  test_lint_shell_subshell_exit.py  test_lint_skill_overlap.py  test_lint_skill_scope.py  test_packaging.py  test_pr_cycle_fast_capability.py  test_register_skill_repo.py  test_release_and_agy_invariants.py  test_release_full_guard.py  test_resolve_skill_repo.py
skills/: README.md  agy  bash-anti-patterns  bump-version  ci-triage  claude-md-prune  codex  codex-consult  codex-review  detect-ai-slop  event-storming  flutter-tdd  investigate  issue-triage  learn  local-port-manager  mob-code-review-only  mycelium  pr-control-log  pr-cycle-deep  pr-cycle-fast  pr-retrospective  pr-review-cycle  pr-review-cycle-codex  pr-review-cycle-mob  problem-frames  protect-push  qa-test-design  session-memory  spectra-amplifier  tdd-kentbeck  verify-done  verify-gemini-models
skills/_template/: SKILL.md  SKILL.md.tpl
skills/bash-anti-patterns/: SKILL.md
skills/bash-hygiene-audit/: SKILL.md
skills/bump-version/: SKILL.md
skills/ci-triage/: SKILL.md
skills/codex/: SKILL.md
skills/detect-ai-slop/: SKILL.md
skills/flutter-tdd/: SKILL.md
skills/freeze/: SKILL.md
skills/harness-eval/: SKILL.md
skills/harness-eval-focus/: SKILL.md
skills/learn/: SKILL.md
skills/local-port-manager/: SKILL.md
skills/new-task-module/: SKILL.md
skills/nightly-agent/: SKILL.md
skills/pr-cycle/: SKILL.md
skills/pr-cycle-fast/: SKILL.md
skills/pr-retrospective/: SKILL.md
skills/pr-review-cycle-codex/: SKILL.md
tasks/: _paths.py  _worktree_guard.py
(+563 files in other folders)
