[project]
name = "my-daily-routine-skill"
version = "0.1.0"
description = "日常瑣事自動化工具集"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pikepdf>=8.0.0",
    "cryptography>=42.0.0",
    "tabula-py>=2.9.0",
    "pdfplumber>=0.11.9",
    "pillow>=10.0.0",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "bandit[toml]",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tasks"]
pythonpath = ["."]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
