[project]
name = "yibi-stack"
version = "1.10.1"
description = "Agentic skill stack for Claude Code"
license = "Apache-2.0"
requires-python = ">=3.11"
# 只列 tasks/ 真正 import 的套件。其餘一律進 optional-dependencies——
# 出貨的 wheel 只含 tasks/，不該把個人帳務工具的重量級依賴（Java runtime、瀏覽器）拖給使用者。
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# mycelium 的 token 預算估算；缺少時 lessons_service.py 自動退化為 len/4 粗估。
tokens = ["tiktoken>=0.7"]
# scripts/ 專用，不出貨（wheel 只含 tasks/）。裝法：`uv sync --extra ledger`。
# 多數成員服務於硬編碼到 localhost:5435/ledgerone 的個人帳務工具，但兩個例外值得標明：
#   - pdfplumber 的唯一消費者是 extract_saas_invoice_amounts.py（SaaS 發票 PDF 擷取，
#     不開 DB、無 DSN）——它在此並非因為帳務，而是因為同樣只被 scripts/ 使用。
#   - psycopg2-binary 全 repo 零 import，但 sqlalchemy 靠連線字串 scheme 載入它作為
#     postgres driver，**不可因「沒人 import」而移除**。
# pandas 被 3 支 scripts 直接 import（compare_billing / report_2024_2025 / import_hsbc_missing），
# 先前只靠 tabula-py 的 transitive 滿足；砍 tabula-py 而不明確宣告會靜默弄壞它們。
ledger = [
    "anthropic>=0.89.0",
    "pandas>=2.0",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]

[project.scripts]
portman = "tasks.local_port_manager.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 只打包 tasks/：排除 scripts/（個人帳務工具）、plugins/、本機 .venv。
packages = ["tasks"]
# 測試不出貨（原本佔 wheel 檔案數的 38%）。CI 從源碼樹跑 pytest（testpaths 讀 checkout，
# 不讀 wheel），故排除不影響任何既有測試。
exclude = ["tasks/**/tests/**"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "pre-commit>=3.6.0",
    "bandit[toml]",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F841"]
".claude/hooks/tests/**/*.py" = ["F841", "E501"]
"scripts/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tasks.*.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

# 註：原本此處有第二個 [[tool.mypy.overrides]]，列著
# ["tabula.*", "playwright.*", "markdownify.*", "bs4.*", "requests.*"]。前四個套件已隨本次
# 依賴瘦身砍除，該區塊隨之失效。經實測後**整段刪除**而非改列 ledger 套件：
#   - mypy 只掃 tasks/（.pre-commit-config.yaml:31 `entry: uv run mypy tasks/` + `files: ^tasks/`；
#     Makefile:22 同），而 tasks/ 只 import click / pydantic / tiktoken——皆有型別資訊。
#   - 對 scripts/ 亦不需要：實測 `uv sync --extra ledger` 後，在**停用本 override** 的情況下
#     跑 `uv run mypy scripts/`，六個 ledger 套件零 import-not-found（mypy 確實有分析：
#     回報 25 errors / 23 source files，其中多筆是 anthropic 真實型別產生的 union-attr，
#     反證其自帶 py.typed）。
# 若未來 scripts/ 納入掃描而某套件確實缺 stub，屆時再依實測加條目——不要憑推測預填。

[tool.pytest.ini_options]
testpaths = ["tasks", ".claude/hooks/tests", "plugins/sdd/scripts/tests", "plugins/pr-flow/skills/pr-cycle-deep/scripts/tests", "commands/scripts/tests", "scripts/tests"]
pythonpath = [".", "commands/scripts"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (CI nightly / monthly, deselect with -m 'not slow')",
]

[tool.pylint.main]
load-plugins = ["pylint.extensions.no_self_use"]

[tool.pylint.messages_control]
# 與 ruff 重疊的規則停用；mypy 已涵蓋型別檢查，停用相關警告
disable = [
    "C0114",  # missing-module-docstring（由 ruff 處理）
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0415",  # import-outside-toplevel（02-error-and-import.md 規定重型 import 延遲）
    "W0404",  # reimported（延遲 import 的副作用）
    "W0621",  # redefined-outer-name（延遲 import 的副作用）
    "W0511",  # fixme（TODO comment 允許）
    "W0718",  # broad-exception-caught（service/parser 刻意捕捉）
    "R0801",  # duplicate-code（pdfplumber 延遲 import 樣板是刻意的）
    "R0903",  # too-few-public-methods（Pydantic model 常觸發）
    "W0212",  # protected-access（tests 常用）
    "E1101",  # generated-members（pydantic、sqlalchemy 動態屬性）
    "E1133",  # not-an-iterable（pydantic Field 讓 pylint 誤判型別）
    "R6301",  # no-self-use（abstract base class 方法必須是 instance method）
    "W2301",  # unnecessary-ellipsis（abstract method body 慣例）
    "W0613",  # unused-argument（abstract method 簽名需要參數）
    "R1702",  # too-many-nested-blocks（PDF parser 嵌套條件多）
    "C1803",  # use-implicit-booleaness-not-comparison（明確比較更清晰）
    "R0902",  # too-many-instance-attributes（dataclass/Pydantic 欄位多）
    "C0103",  # invalid-name（SCREAMING_SNAKE_CASE 私有常數）
    "C0302",  # too-many-lines（大型 test_parsers.py 是刻意的）
    "C0413",  # wrong-import-position（tests 中路徑設定需要）
    "W1510",  # subprocess-run-check（已用 nosec 標記，回傳碼由 caller 處理）
    "W0622",  # redefining-builtin（tests 中用 id 命名 DB 主鍵）
    "W0221",  # arguments-differ（pydantic model_post_init override）
    "R0911",  # too-many-return-statements（service 多重錯誤路徑）
    "R0917",  # too-many-positional-arguments（Click command 參數多）
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-locals = 40       # parser 函式天生需要大量區域變數
max-branches = 35     # PDF 解析分支多
max-statements = 120  # parser parse() 方法長
max-attributes = 12

[tool.pylint.basic]
# 允許 SCREAMING_SNAKE_CASE 私有常數（如 _TYPE_TO_FORMAT）
const-rgx = "([A-Z_][A-Z0-9_]*|[a-z_][a-z0-9_]*)$"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "scripts"]
skips = ["B101"]
